@@ -38,9 +38,11 @@
     <string name="Option">Options</string>
     <string name="Help">Help</string>
     <string name="HelpHeader">aSQLiteManager help</string>
+    <string name="PageSize">Page size</string>
+    <string name="PageSizeText">Number of lines to retrieve when paging data</string>
     <string name="HelpText">
 Here you will find some more help in the future.
-\n\nIf you click on a field in the data grid the content is copied to the clip board.
+\n\nClick on any field in the data grid to copy its content to the clip board.
 \n\nOn the query view click on the menu button to build a select statement with: 
 \nselect [fields] from [tables]
 \n\nVisit aSQLiteMagers\'s home page at:
